add get endpoint
see CDR-690